style to contact page

--- a/Contact.html
+++ b/Contact.html
@@ -5,7 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karina's personal site</title>
-    <link rel="stylesheet" href="css/styles.css">
+       <style>
+
+        body{
+            background-color:rgb(198, 166, 225);
+        }
+
+        hr{
+           
+            border-color: grey;
+            border-style: none;
+            border-top-style: dotted;
+            width:10%;
+            border-width: 5px;
+        }
+        h1{
+            color:rgb(117, 67, 160)
+        }
+        h3{
+            color:rgb(117, 67, 160)
+        }
+    </style>
 </head>
 <body >
  
